<resources>
    <string name="app_name">Elder Health Helper</string>
    <string name="check_data">Checking data…</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- Patient options-->
    <string name="patientSettings">Patient Settings</string>
    <string name="patientSettingsAlert">Alerts</string>
    <string name="patientSettingsZone">Secure Zone</string>
    <string name="locatePatient">Locate Patient</string>
    <string name="call">Call</string>

    <!-- MENU -->
    <string name="home">Home</string>
    <string name="patientsList">Patients List</string>
    <string name="medicalCenters">Medical Centers</string>
    <string name="configuration">Configuration</string>

    <!-- CLOSE DIALOG-->
    <string name="close">Exit</string>
    <string name="close_body">Do you want to leave?</string>
    <string name="Accept">Accept</string>
    <string name="cancel">Cancel</string>

    <!-- INTERNET -->
    <string name="internet_tittle">Internet Connection</string>
    <string name="internet_body">There\'s no internet connection. Please turn on WiFi or Mobile data.</string>
    <string name="logout">logout</string>

    <!-- Patients-->
    <string name="name_header">Name</string>
    <string name="birthdate_header">BirthDate</string>
    <string name="phone_header">Phone</string>
    <string name="address_header">Address</string>
    <string name="surname_header">Surnames</string>
    <string name="disese_header">Disease</string>
    <string name="dependency_header">Dependency grade</string>

    <string name="request_patient">Request new patient</string>
    <string name="add_patient_header">This is a form to request for the addition of a new patient for your supervision. This may last from 24 to 48 hours. Thanks for your patience.</string>
    <string name="add_patient">New patient form</string>
    <string name="wrong_dni">Wrong dni. Ex. (12345678X)</string>
    <string name="wrong_name">Name can\'t be empty.</string>
    <string name="wrong_surnames">Surnames can\'t be empty.</string>
    <string name="wrong_phone">Phone can\'t be empty.</string>
    <string name="wrong_address">Address can\'t be empty</string>
    <string name="wrong_disease">The field disease can't be empty.</string>
    <string name="birthday_header">Birthdate</string>
    <string name="wrong_date">Wrong date</string>
    <string name="wrong_date_text">Future date is not allowed here.</string>
    <string name="wrong_birthday">Bithdate field can't be empty.</string>
    <string name="low">Low</string>
    <string name="mid">Medium</string>
    <string name="high">High</string>

    <!-- Dialogs -->
    <string name="loading">Loading…</string>
    <string name="alert">Alert</string>
    <string name="wrong_app">You installed the wrong application, in your profile is specified that you are the patient nor a responsible.</string>
    <string name="please_wait">Loading data… Please wait</string>

    <!-- TopMenuItems-->
    <string name="update">Update</string>

    <!-- Register-->
    <string name="new_user">Phone number</string>
    <string name="new_user_body">Please, insert your phone number and idCard</string>
    <string name="dni_header">DNI or NIF</string>
    <string name="login">Log in</string>

    <!-- News-->
    <string name="news">News</string>


    <!-- PATIENT LOCATION -->
    <string name="last_seen">Last seen:</string>

    <!-- REGISTER-->
    <string name="register_header">Para empezar a utilizar la aplicación del responsable, introduzca el DNI y el teléfono que nos facilitó en el momento de su registro en nuestra web. En cualquier caso, usted puede ponerse en contacto con nosotros. Gracias.</string>
    <string name="wrong_register_header">Login error</string>
    <string name="wrong_register">Something wrong happened while loging in. Please, try again in 5 minuts or don\'t hesitate to contact with us.</string>
    <string name="contact">Contact</string>
    <string name="phone_num">123123123</string>

    <!-- SETTINGS -->
    <string name="about_comp">Acerca de EHH</string>
    <string name="accessibility">Accessibility</string>
    <string name="about">About</string>
    <string name="features">features</string>
    <string name="enterprise_email">ehh.healthhelper@gmail.com</string>
    <string name="enterprise_phone">973010203</string>
    <string name="enterprise_link">alumnes-grp04.udl.cat/EHHWeb</string>
    <string name="enterprise_address">Avda. Jaume II 69</string>

    <!-- LOGOUT ALERT-->
    <string name="warning">Alert</string>
    <string name="delete_warning">If you continue all the data will be erased.</string>

</resources>
