<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_menu">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/community"
            android:title="@string/patientsList" />
        <item
            android:id="@+id/nav_medical_centers"
            android:icon="@drawable/ic_hospital"
            android:title="@string/medicalCenters" />
    </group>
    <group
        android:id="@+id/config_menu">
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_settings"
            android:title="@string/configuration" />

    </group>

</menu>